RESOLVED FIXED70603
[WK2]Main window never gets focus using TAB key in WebKit2 GTK+.
https://bugs.webkit.org/show_bug.cgi?id=70603
Summary [WK2]Main window never gets focus using TAB key in WebKit2 GTK+.
Vamshikrishna Yellenki
Reported 2011-10-21 07:00:09 PDT
TAB key never propagate to the Main Window in Minibrowser.
Attachments
Patch fixes the Main Window focus issue with TAB key (1.83 KB, patch)
2011-10-21 07:08 PDT, Vamshikrishna Yellenki
gustavo.noronha: commit-queue-
Typo error fixed and updated the patch (1.84 KB, patch)
2011-10-21 08:20 PDT, Vamshikrishna Yellenki
no flags
Vamshikrishna Yellenki
Comment 1 2011-10-21 07:08:21 PDT
Created attachment 111961 [details] Patch fixes the Main Window focus issue with TAB key Patch fixes the Main Window focus issue with TAB key
Collabora GTK+ EWS bot
Comment 2 2011-10-21 07:20:29 PDT
Comment on attachment 111961 [details] Patch fixes the Main Window focus issue with TAB key Attachment 111961 [details] did not pass gtk-ews (gtk): Output: http://queues.webkit.org/results/10176934
Vamshikrishna Yellenki
Comment 3 2011-10-21 08:20:50 PDT
Created attachment 111968 [details] Typo error fixed and updated the patch Typo error fixed and updated the patch
Carlos Garcia Campos
Comment 4 2011-10-25 06:21:54 PDT
Comment on attachment 111968 [details] Typo error fixed and updated the patch Patch looks good to me.
Gustavo Noronha (kov)
Comment 5 2011-10-25 08:34:10 PDT
Comment on attachment 111968 [details] Typo error fixed and updated the patch LGTM
WebKit Review Bot
Comment 6 2011-10-25 09:39:36 PDT
Comment on attachment 111968 [details] Typo error fixed and updated the patch Clearing flags on attachment: 111968 Committed r98351: <http://trac.webkit.org/changeset/98351>
WebKit Review Bot
Comment 7 2011-10-25 09:39:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.