[WK2]Main window never gets focus using TAB key in WebKit2 GTK+. https://bugs.webkit.org/show_bug.cgi?id=70603

Patch by Vamshikrishna Yellenki <vamshi@motorola.com> on 2011-10-25
Reviewed by Gustavo Noronha Silva.

* MiniBrowser/gtk/BrowserWindow.c:
(focus):
(unFocus):
(browserWindowUIClientInit):

Canonical link: https://commits.webkit.org/87012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98351 268f45cc-cd09-0410-ab3c-d52691b4dbfc